<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <include layout="@layout/partial_header" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/banner"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/login_description" />

        <Button
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/colorButtonFacebook"
            android:padding="10dp"
            android:text="@string/facebook_label"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:icon="@drawable/ic_facebook"
            app:iconGravity="textStart"
            app:iconTint="@android:color/white" />

        <Button
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/colorButtonGoogle"
            android:padding="10dp"
            android:text="@string/google_label"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconTint="@android:color/white" />

        <Button
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/colorButtonSms"
            android:padding="10dp"
            android:text="@string/otp_label"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:icon="@drawable/ic_sms"
            app:iconGravity="textStart"
            app:iconTint="@android:color/black" />

        <Button
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/colorButtonEmail"
            android:padding="10dp"
            android:text="@string/email_label"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:icon="@drawable/ic_email"
            app:iconGravity="textStart"
            app:iconTint="@android:color/black" />

        <TextView
            android:id="@+id/terms_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="To publish this app on Play Store, you must first create a Privacy Policy and Terms of Use page, then update links in config.xml." />

        <CheckBox
            android:id="@+id/terms_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            tools:text="To publish this app on Play Store, you must first create a Privacy Policy and Terms of Use page, then update links in config.xml." />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

</androidx.constraintlayout.widget.ConstraintLayout>
